# ks-gen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.exception  MANUAL.md  MINIMAL-TEST.md  README.md  SECURITY.md  pyproject.toml  pytest-out.txt  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  sbom.yml
docs/: going-public.md
docs/audit-story/: SSG-VERSIONS.md  alma8-rule-ids.txt  alma9-rule-ids.txt  cross-distro-rule-id-diff.md  ubuntu2404-rule-ids.txt
examples/: host-container.yaml
scripts/audit_story/: extract_ssg_rule_ids.py
src/ks_gen/: __main__.py  cli.py  config.py  disk_layout.py  disk_luks.py  exceptions_report.py  iso.py  lint.py  loader.py  registry.py  skeleton.py  tailoring.py  topo.py  wizard.py  writer.py
tests/: conftest.py  test_assets.py  test_bootloader.py  test_cli_gen_ubuntu.py  test_config_schema.py  test_disk_layout_helpers.py  test_disk_luks.py  test_distro_field.py  test_exceptions_report.py  test_install_source.py  test_invariants.py  test_iso.py  test_lint.py  test_loader.py  test_registry.py  test_skeleton.py  test_skeleton_ubuntu.py  test_smoke.py  test_tailoring.py  test_topo.py  test_verify_arf.py  test_verify_auth.py  test_verify_baseline.py  test_verify_errors.py  test_verify_fleet.py  test_verify_fleet_report.py  test_verify_history.py  test_verify_html.py  test_verify_reconcile.py  test_verify_remote.py  test_verify_report.py  test_verify_run.py  test_verify_ssh.py  test_verify_suggest.py  test_verify_tailoring_drift.py  test_verify_transport.py  test_wizard.py  test_writer.py
tests/__snapshots__/: test_bootloader.ambr  test_verify_fleet_report.ambr  test_verify_history.ambr  test_verify_report.ambr  test_verify_suggest.ambr
tests/audit_story/: test_extract_ssg_rule_ids.py
tests/fixtures/: arf-clean.xml  arf-incomplete.xml  arf-install-baseline.xml  arf-mixed.xml
tests/golden/: alma8-minimal.host.yaml  bare-metal-usbguard.host.yaml  container-host-lean.host.yaml  container-host.host.yaml  data-disks-mixed.host.yaml  data-disks-preserve-label.host.yaml  data-disks-preserve-partnum.host.yaml  data-disks-preserve-uuid.host.yaml  data-disks-wipe.host.yaml  layout-custom-sizes.host.yaml  layout-stig-baseline-preset.host.yaml  layout-stig-baseline.host.yaml  lean-preset.host.yaml  luks-partial-inline.host.yaml  luks-partial-sidecar.host.yaml  luks-partial-sidecar.key  luks-tang.host.yaml  minimal-dhcp.host.yaml  minimal-targeted-disk.host.yaml  modern-crypto.host.yaml  network-install.host.yaml  stig-server-targeted-disk.host.yaml  stig-strict.host.yaml  test_alma8_minimal.py  test_bare_metal_usbguard.py  test_container_host.py  test_container_host_lean.py  test_data_disks_mixed.py  test_data_disks_preserve_label.py  test_data_disks_preserve_partnum.py  test_data_disks_preserve_uuid.py  test_data_disks_wipe.py  test_layout_custom_sizes.py  test_layout_stig_baseline.py  test_lean_preset.py  test_luks_partial_inline.py  test_luks_partial_sidecar.py  test_luks_tang.py  test_minimal_dhcp.py  test_minimal_targeted_disk.py  (+7 more)
tests/rules/: test_admin_user_and_keys.py  test_alma8_crypto_policy.py  test_auditd_actions.py  test_banner_text.py  (+28 more)
(+220 files in other folders)
