[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ks-gen"
version = "0.1.0"
requires-python = ">=3.11"
description = "Remote-safe DISA STIG kickstart generator for AlmaLinux 9."
authors = [{ name = "Patrick Connallon" }]
license = { file = "LICENSE" }
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pykickstart>=3.52",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "syrupy>=4",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
ks-gen = "ks_gen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ks_gen"]

[tool.hatch.build.targets.wheel.force-include]
"src/ks_gen/templates" = "ks_gen/templates"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
files = ["src/ks_gen"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
