[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ks-gen"
version = "0.20.0"
requires-python = ">=3.11"
description = "Remote-safe DISA STIG kickstart generator for AlmaLinux 9."
authors = [{ name = "Patrick Connallon" }]
license = { file = "LICENSE" }
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pykickstart>=3.52",
  "questionary>=2.0",
]
keywords = [
  "kickstart",
  "almalinux",
  "stig",
  "disa",
  "oscap",
  "scap",
  "compliance",
  "security-hardening",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage      = "https://github.com/SupremeCommanderHedgehog/ks-gen"
Documentation = "https://github.com/SupremeCommanderHedgehog/ks-gen/blob/main/MANUAL.md"
Issues        = "https://github.com/SupremeCommanderHedgehog/ks-gen/issues"
Changelog     = "https://github.com/SupremeCommanderHedgehog/ks-gen/blob/main/CHANGELOG.md"
Source        = "https://github.com/SupremeCommanderHedgehog/ks-gen"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "syrupy>=4",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
  "pre-commit>=3.7",
]

[project.scripts]
ks-gen = "ks_gen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ks_gen"]

[tool.hatch.build.targets.wheel.force-include]
"src/ks_gen/assets/create-rootless-user.sh" = "ks_gen/assets/create-rootless-user.sh"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
files = ["src/ks_gen"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pykickstart.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
